# fractures-ts

./: Cargo.toml  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/cost/: base.rs  costl1.rs  mod.rs
src/detection/: base.rs  mod.rs  pelt.rs
src/utils/: utils.rs
src/wrapper/: cost.rs  mod.rs  pelt.rs
