[package]
edition = "2021"
name = "fractures-ts"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dyn-clone = "1.0.17"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
serde_json = "1.0.127"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
